    invoked!)
22. Add option for UMS devices to autoscan, or not, when detected - default is
    set to not autoscan.
23. Fix detection of some UMS devices that are already mounted at startup.
24. Load library view covers in separate thread, as per albums view.
25. Add expandAll (Ctrl +) / collpseAll (Ctrl -) actions to expand/collapse all
    items of currently    focused treeview.

0.6.1
-----
1. Fix grouped playqueue when we have repeated instances of an album. Now when
   an album is expanded/collapsed - all instances are expanded/collapsed.

0.6.0
-----
 1. Grouped style for playlists.
 2. Fix reading of lyrics files with special characters - thanks to Martin
    Blumenstingl for the patch.
 3. Give tray icon a tooltip - thanks to Martin Blumenstingl for the patch.
 4. Apply 'group single track albums' to devices.
 5. Add option to group albums with multiple artists under Various Artists.
 6. When checking whether a song exists in device, or library, need to also
    check 'single tracks' and 'multiple artist' groupings - if these have been
    enabled.
 7. Update playlists if modified by another client.
 8. When an album is collapsed/expanded in playqueue, call dataChanged() so that
    title row is redrawn - otherwise, for single-track albums, the view might
    not get refreshed.
 9. Provide option to *not* store downloaded covers in MPD dir.
10. If fading out to stop, and cantata is closed, then send stop command.
11. Add 'Edit Song Tags' action to playqueue context menu.
12. When loading covers, if we fail to find one of the standard names
    (cover.jpg/png, AlbumArt.jpg/png, folder.jpg/png), then use the first image
    found.
13. Add a 'Locate In Library' action, to locate the selected play queue track
    in the library page.
14. Fix crash when quiting Cantata whilst devices are being scanned.
15. Disable JavaScript for webview, this removes the 'Show'/'Hide' buttons from
    wikipedia pages.
16. Set font family for info page. (KDE only)